tests/baselines/reference/callOverloads1.errors.txt
tests/cases/compiler/callOverloads1.ts(1,7): error TS2300: Duplicate identifier 'Foo'.
tests/cases/compiler/callOverloads1.ts(9,10): error TS2300: Duplicate identifier 'Foo'.
tests/cases/compiler/callOverloads1.ts(9,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/callOverloads1.ts(17,1): error TS2348: Value of type 'typeof Foo' is not callable. Did you mean to include 'new'?


==== tests/cases/compiler/callOverloads1.ts (4 errors) ====
    class Foo { // error
          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
        bar1() { /*WScript.Echo("bar1");*/ }
    
        constructor(x: any) {
            // WScript.Echo("Constructor function has executed");
        }
    }
    
    function Foo(); // error
             ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    function F1(s:string);
    function F1(a:any) { return a;}
    
    var f1 = new Foo("hey");
    
    
    f1.bar1();
    Foo();
    ~~~~~
!!! error TS2348: Value of type 'typeof Foo' is not callable. Did you mean to include 'new'?